2005-07-23  Andras Varga

	* cwatch.h: WATCH implementation changed

2005-06-25  Andras Varga

	* cpar.h: added default value to type parameter of setFromText().

2005-04-28  Andras Varga

	* cmessage.h: added byteLength(), setByteLength(), addByteLength()
	convenience functions. They just invoke the length(), setLength(),
	addLength() methods.

2005-04-21  Andras Varga

	* util.h: added simtimeToStrShort().

2005-04-04  Andras Varga

	* cenvir.h: fixed compilation bug in gcc3.4. For some obscure reason,
	in template classes gcc 3.4 seems to insist on fully qualifying calls
	to methods from the base class. This does not appear to make much
	sense, and indeed was not a problem with gcc<3.4, vc6.0 or vc7.1,
	and even gcc3.4 is willing to compile the old code if run with
	the -fpermissive option. Oh well...

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* cenvir.h: cEnvir::getParameter() return type changed from
	const char * to std::string. This was needed because if the
	parameter value contains the xmldoc() function, getParameter()
	will modify the file name in it to make it relative to the
	position of the ini file the setting was read from.

2005-03-18  Andras Varga

	* cconfig.h: added getBaseDirectoryFor() and getLocation() functions
	to cConfiguration

	* added cstrtokenizer.h, which contains cStringTokenizer

2005-03-17  Andras Varga

	* cscheduler.h: added method executionResumed() to cScheduler and
	cRealtimeScheduler

	* cstruct.h, ctypes.h: constructor usage patches to satisfy gcc 3.3.5
	[reported by Tom Parker]

2005-03-15  Andras Varga

	* cexception.h: added cRuntimeError

2005-02-24  Andras Varga

	* added missing SIM_API declarations to several classes and functions

2005-01-10  Andras Varga

	* create platdep/ subdirectory

	* cscheduler.h: added cRealTimeScheduler class, added startRun(),
	endRun() virtual functions to cScheduler


2004-12-29  ------ omnetpp-3.0 released ------

2004-12-22  Andras Varga
