@@ -167,6 +167,8 @@ engine/diffquot.obj: engine/diffquot.cc \
   engine/dataflowmanager.h
 engine/exception.obj: engine/exception.cc \
   engine/exception.h
+engine/filetokenizer.obj: engine/filetokenizer.cc \
+  engine/filetokenizer.h
 engine/filewriter.obj: engine/filewriter.cc \
   engine/channel.h \
   engine/filewriter.h \
@@ -187,6 +189,7 @@ engine/filternodes.obj: engine/filternodes.cc \
   engine/dataflowmanager.h
 engine/getvectors.obj: engine/getvectors.cc \
   engine/getvectors.h \
+  engine/filetokenizer.h \
   engine/util.h \
   engine/exception.h
 engine/mergernodes.obj: engine/mergernodes.cc \
@@ -223,7 +226,8 @@ engine/nodetyperegistry.obj: engine/nodetyperegistry.cc \
   engine/node.h \
   engine/nodetype.h \
   engine/dataflowmanager.h \
-  engine/channel.h
+  engine/channel.h \
+  engine/filetokenizer.h
 engine/slidingwinavg.obj: engine/slidingwinavg.cc \
   engine/channel.h \
   engine/slidingwinavg.h \
@@ -241,6 +245,7 @@ engine/vectorfilereader.obj: engine/vectorfilereader.cc \
   engine/node.h \
   engine/exception.h \
   engine/nodetype.h \
+  engine/filetokenizer.h \
   engine/dataflowmanager.h
 engine/vectorfilewriter.obj: engine/vectorfilewriter.cc \
   engine/channel.h \
