@@ -96,6 +96,7 @@ inspector.obj: inspector.cc \
   ../../include/cllist.h \
   ../../include/globals.h \
   ../../include/cwatch.h \
+  ../../include/cstlwatch.h \
   ../../include/cpar.h \
   ../../include/cgate.h \
   ../../include/cmessage.h \
@@ -157,6 +158,7 @@ inspfactory.obj: inspfactory.cc \
   ../../include/cllist.h \
   ../../include/globals.h \
   ../../include/cwatch.h \
+  ../../include/cstlwatch.h \
   ../../include/cpar.h \
   ../../include/cgate.h \
   ../../include/cmessage.h \
@@ -255,6 +257,7 @@ objinsp.obj: objinsp.cc \
   ../../include/cllist.h \
   ../../include/globals.h \
   ../../include/cwatch.h \
+  ../../include/cstlwatch.h \
   ../../include/cpar.h \
   ../../include/cgate.h \
   ../../include/cmessage.h \
